--- a/public/view.html
+++ b/public/view.html
@@ -27,7 +27,7 @@
   <script src="./cdn/element-ui/2.13.2/index.js" charset="utf-8"></script>
   <script src="https://cdn.staticfile.org/Swiper/4.5.1/js/swiper.min.js"> </script>
   <script src="./lib/index.umd.min.js"></script>
-  <title>avue-data数据大屏</title>
+  <title>julian</title>
   <style>
     * {
       padding: 0;
