--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,12 @@
   <script src="<%= BASE_URL %>cdn/html2canvas/html2canvas.min.js"></script>
   <script src="./html.js"></script>
 
-  <title>julian-data</title>
+  <title>MINTH GROUP</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but avue-data doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+    <strong>MINTH GROUP</strong>
   </noscript>
   <div id="app"></div>
   <script src="<%= BASE_URL %>cdn/vue/2.5.2/vue.min.js?version=2.0" charset="utf-8"></script>
