--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <script src="https://cdn.staticfile.org/Swiper/4.5.1/js/swiper.min.js"> </script>
   <script src="<%= BASE_URL %>cdn/html2canvas/html2canvas.min.js"></script>
   <script src="./html.js"></script>
-
+  <script src="https://cdn.bootcdn.net/ajax/libs/fabric.js/451/fabric.min.js"></script>
   <title>MINTH GROUP</title>
 </head>
 
