--- a/public/view.html
+++ b/public/view.html
@@ -26,6 +26,7 @@
   <script src="./cdn/axios/1.0.0/axios.min.js" charset="utf-8"></script>
   <script src="./cdn/element-ui/2.13.2/index.js" charset="utf-8"></script>
   <script src="https://cdn.staticfile.org/Swiper/4.5.1/js/swiper.min.js"> </script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/fabric.js/451/fabric.min.js"></script>
   <script src="./lib/index.umd.min.js"></script>
   <title>julian</title>
   <style>
